# sunfish_library_reference

./: .gitignore  LICENSE  Makefile  README.md  app_appliance_mgr.py  app_fabric_mgr.py  app_sunfish_server.py  pyproject.toml  requirements.txt
.github/workflows/: repo-test.yml  repo_test.yml
Resources/EventService/Subscriptions/: index.json
Resources/Systems/: index.json
storage_backend/: backend_FS.py  utils.py
sunfish/: __init__.py
sunfish/events/: event_handler.py  event_handler_interface.py  redfish_event_handler.py  redfish_subscription_handler.py  subscription_handler.py  subscription_handler_interface.py
sunfish/lib/: agents_management.py  core.py  exceptions.py  object_handler.py  object_handler_interface.py  object_manager_interface.py
sunfish/models/: __init__.py  plugins.py  types.py
sunfish/storage/: backend_FS.py  backend_interface.py
sunfish_plugins/event_handlers/redfish/: redfish_event_handler.py
sunfish_plugins/events_handlers/redfish/: redfish_event_handler.py
sunfishcorelib/: core.py  exceptions.py
sunfishcorelib/events/: __init__.py  event_handler.py  subscription_handler.py
sunfishcorelib/storage_backend/: backend_FS.py  backend_interface.py  utils.py
sunfishcorelib/sunfishcorelib/: core.py  exceptions.py
templates/: CLI_start.sh  CLI_utilities.py  register_H3_API.json  reset_sideloader.sh  setup_all.sh  start_all.sh  upload_H3_API.json
tests/: __init__.py  conf.json  conf_broken_module.json  test_sunfishcore_library.py  test_utils.py  tests_template.py
tests/Resources/: index.json
(+39 files in other folders)
