[tool.poetry]
name = "sunfish"
version = "0.1.0"
description = ""
authors = ["Erika Rosaverde <erika.rosaverde@ibm.com>"]
readme = "README.md"
packages = [
	{ include = "sunfish" }
]

[tool.poetry.dependencies]
python = ">=3.9"
flask = "^2.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
