[tool.poetry]
name = "sunfish"
version = "0.1.0"
description = ""
authors = ["Erika Rosaverde <erika.rosaverde@ibm.com>"]
readme = "README.md"
packages = [
	{ include = "sunfish" },
	{ include = "sunfish_plugins", from = "." }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["sunfish_plugins.*"]

[tool.poetry.dependencies]
python = ">=3.9"
flask = "^3.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
